# llm-tutorial

./: README.md  docker-compose.yml
backend/: .gitignore  pyproject.toml
backend/.docker/: Dockerfile
backend/account/: models.py
backend/account/migrations/: 0001_initial.py
backend/apps/account/: admin.py
backend/apps/llm_config/: apps.py  urls.py  views.py
backend/apps/llm_config/prompts/: cooking.py
backend/config/: settings.py  urls.py
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/.docker/: Dockerfile
frontend/src/: App.tsx
frontend/src/components/: LLMChatBox.tsx
frontend/src/domain/api/: apiClient.ts  llm.ts
frontend/src/pages/: Home.tsx
