[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "taku820801",email = "takuchanpower@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=6.0,<7.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django-debug-toolbar (>=6.1.0,<7.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "django-filter (>=25.2,<26.0)",
    "djoser (>=2.3.3,<3.0.0)",
    "black (>=25.12.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)"
]
